<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Livescore Agent</string>
    <string name="hello_world">Please enter your details.</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="cancel">Cancel</string>
    <string name="end_first_half">End 1st half</string>
    <string name="end_second_half">End 2nd half</string>
    <string name="start_first_half">Start 1st half</string>
    <string name="start_second_half">Start 2nd half</string>
    <string name="go_back">Go back</string>

</resources>